<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_addnewtask_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit_task_title"
                android:textSize="20sp" />

        </FrameLayout>


        <!-- Name of task -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_addnewtask_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_task_name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <!--Description-->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ed_addnewtask_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_task_description"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>


        <!--File import-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="left"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ed_addnewtask_file"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/edit_task_filepath"
                    android:inputType="textUri"
                    android:layout_weight="8" />


                <Button
                    android:id="@+id/bt_addedittask_browse"
                    style="@android:style/Widget.DeviceDefault.Button.Borderless.Small"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:singleLine="true"
                    android:layout_weight="2"
                    android:text="@string/edit_task_browse_button"
                    android:typeface="normal" />
            </LinearLayout>

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:visibility="visible"
            tools:listitem="@layout/keyword_list_item" />


    </LinearLayout>
</ScrollView>